--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # TODO: REMOVE
+  assets:
+    - lib/services/shared/assets/league_overview.html
+    - lib/services/shared/assets/all_matches.html
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
