--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.6.0
   provider: ^6.1.5+1
   url_launcher: ^6.3.2
+  async: ^2.13.0
 
 dev_dependencies:
   flutter_test:
