--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.5+1
   url_launcher: ^6.3.2
   async: ^2.13.0
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
