--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,6 +1,6 @@
 # flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
-  image_path: "assets/icons/logo2.jpg"
+  image_path: "assets/icons/logo-clear-background.png"
 
   android: "launcher_icon"
   # image_path_android: "assets/icon/icon.png"
@@ -20,15 +20,15 @@ flutter_launcher_icons:
 
   web:
     generate: true
-    image_path: "assets/icons/logo2.jpg"
+    image_path: "assets/icons/logo-clear-background.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
 
   windows:
     generate: true
-    image_path: "assets\\icons\\logo2.jpg"
+    image_path: "assets\\icons\\logo-clear-background.png"
     icon_size: 48 # min:48, max:256, default: 48
 
   macos:
     generate: true
-    image_path: "assets/icons/logo2.jpg"
+    image_path: "assets/icons/logo-clear-background.png"
